[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[project]
name = "pyliven"
version = "0.1.0"
dependencies = []
requires-python = ">=3.5"
authors = [
    {name = "Abhijat Bharadwaj", email = "bharadwaj.abhijat@yahoo.com"}
]
maintainers = [
    {name = "Abhijat Bharadwaj", email = "bharadwaj.abhijat@yahoo.com"}
]
description = "Stateful variables in Python, a new way to calculate"
readme = "README.md"
license = {file="LICENSE"}
keywords = ["live", "stateful", "python", "variables", "numeric"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries :: Python Modules :: Stateful Variables",
]

[project.urls]
Documentation = "https://keymii.github.io/pyliven/"
Repository = "https://github.com/Keymii/pyliven/"
Issues = "https://github.com/Keymii/pyliven/issues"
